Hoan thien cau truc ban dau cho project

--- a/SystemAnalysisAndDesign/SystemAnalysisAndDesign/SystemAnalysisAndDesign.csproj
+++ b/SystemAnalysisAndDesign/SystemAnalysisAndDesign/SystemAnalysisAndDesign.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <Folder Include="Models\" />
+    <Folder Include="Image\" />
     <Folder Include="ViewModels\" />
   </ItemGroup>
 
