--- a/SystemAnalysisAndDesign/SystemAnalysisAndDesign/SystemAnalysisAndDesign.csproj
+++ b/SystemAnalysisAndDesign/SystemAnalysisAndDesign/SystemAnalysisAndDesign.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="MahApps.Metro.IconPacks" Version="5.1.0" />
     <PackageReference Include="MaterialDesignThemes" Version="5.2.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.3" />
