--- a/SystemAnalysisAndDesign/SystemAnalysisAndDesign/SystemAnalysisAndDesign.csproj
+++ b/SystemAnalysisAndDesign/SystemAnalysisAndDesign/SystemAnalysisAndDesign.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
     <PackageReference Include="FiveCodMaterialDesign" Version="2.0.1" />
     <PackageReference Include="LiveCharts.Wpf" Version="0.9.7" />
     <PackageReference Include="MaterialDesignThemes" Version="5.2.1" />
